# CUDAGameOfLife

./: CMakeLists.txt  README.md
src/: main.cpp  simulation.cu  simulation.cuh
